--- a/.github/workflows/test-oryx.yml
+++ b/.github/workflows/test-oryx.yml
@@ -9,15 +9,21 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  run-tests:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        script:
+          - blazor-wasm-aot
+          - blazor-wasm
+          - functions-dotnet6-inproc
+          - functions-dotnet6-isolated
+          - functions-dotnetcore3.1-inproc
+          - functions-node12
+          - functions-python3.8
     steps:
       - uses: actions/checkout@v2
-
-      - name: Set execute bit
-        run: chmod +x *
-
-      - name: Test Blazor Wasm
+      - name: ${{ matrix.script }}
         run: |
-          docker run --rm -v $(pwd):/scripts arroycdocker/build:azfunc-jamstack-aot /scripts/blazor-wasm-aot.sh
+          chmod +x *
+          docker run --rm -v $(pwd):/scripts mcr.microsoft.com/oryx/build:azfunc-jamstack-20211001.1 /scripts/${{ matrix.script }}.sh
