Add no AoT blazor

--- a/.github/workflows/test-oryx.yml
+++ b/.github/workflows/test-oryx.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         script:
           - blazor-wasm-aot
+          - blazor-wasm-aot2
           - blazor-wasm
           - functions-dotnet6-inproc
           - functions-dotnet6-isolated
