Change strategy to not fail fast

--- a/.github/workflows/test-oryx.yml
+++ b/.github/workflows/test-oryx.yml
@@ -12,6 +12,7 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         script:
           - blazor-wasm-aot
@@ -25,7 +26,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: ${{ matrix.script }}
-        continue-on-error: true
         run: |
           chmod +x *
           docker run --rm -v $(pwd):/scripts mcr.microsoft.com/oryx/build:azfunc-jamstack-20220131.3 /scripts/${{ matrix.script }}.sh
