--- a/.github/workflows/test-oryx.yml
+++ b/.github/workflows/test-oryx.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18
     strategy:
       fail-fast: false
       matrix:
