--- a/.github/workflows/test-oryx.yml
+++ b/.github/workflows/test-oryx.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   run-tests:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
@@ -28,4 +28,4 @@ jobs:
       - name: ${{ matrix.script }}
         run: |
           chmod +x *
-          docker run --rm -v $(pwd):/scripts mcr.microsoft.com/oryx/build:azfunc-jamstack-20220131.3 /scripts/${{ matrix.script }}.sh
+          docker run --rm -v $(pwd):/scripts oryxtestacr.azurecr.io/public/oryx/build:azfunc-jamstack-test /scripts/${{ matrix.script }}.sh
